# stt-tts-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
src/: cli.py  config.py  factory.py
src/audio/: capture.py  playback.py  preprocessing.py
src/core/: stt_interface.py  tts_interface.py
src/providers/stt/: faster_whisper.py
src/providers/tts/: fish_speech.py  xtts_v2.py
